<resources>
    <!--App variables-->
    <string name="app_name">Go Note It</string>

    <!--Menu-->
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="notes">Notes</string>
    <string name="fav_notes">Favorite Notes</string>
    <string name="calendar">Calendar</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!--Login Screen-->
    <string name="hint_login">login</string>
    <string name="hint_password">password</string>
    <string name="login">Login</string>
    <string name="login_error">Error occurred during login. Please try again.</string>
    <string name="not_logged_in">You are not logged in.</string>

    <!--Main Screen-->
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="content_description_add_note">Add note</string>

    <!--Create note screen-->
    <string name="title">Note Title</string>
    <string name="create_note">Create Note</string>
    <string name="your_note">Type in your note here</string>
    <string name="error_with_saving_note">We encountered error during saving your note.</string>
    <string name="error_with_capture_image">Couldn\'t capture your image.</string>
    <string name="error_image_not_found">Image not found</string>
    <string name="update_note">Update Note</string>
    <string name="content_description_add_image">Add image</string>
    <string name="content_description_delete_image">Delete image</string>

    <!--Image descriptions-->
    <string name="content_description_application_logo">Go Note It logo</string>
    <string name="content_description_delete_note_action">Delete note</string><string name="content_description_image_view_for_attachment">Image View for attachment. If it\'s visible then there
    is attachment.</string>

    <!--Widgets-->
    <string name="add_note_widget">Add Note Widget</string>
    <string name="add_note">Add note</string>

    <!--Errors-->
    <string name="error_not_implemented_offline">%1$s offline is not implemented yet.</string>
    <string name="creating_note">Creating note</string>
    <string name="deleting_note">Deleting note</string>
    <string name="updating_note">Updating note</string>
    <string name="youre_offline">You are offline.</string>
    <string name="general_error_downloading">We encountered error downloading.</string>

    <!--Display Note-->
    <string name="edit">Edit</string>

    <!--Transitions-->
    <string name="transition_note_title">title transition</string>
    <string name="transition_note_content">note ct transition</string>
    <string name="transition_note_image">transition image</string>
    <string name="transition_circular_reveal_create_screen">create screen transition</string>

    <!--Favs-->
    <string name="fav_not_implemented">Favorites are not implemented yet.\nStay tuned.</string>

    <!--About-->
    <string name="gonoteit_about_title">About</string>
    <string name="gonoteit_about">GoNote.it is an application to take and share notes.
        \n\nAndroid application GoNote.it was started as Capstone Project for Android Developer Nanodegree in May 2018.</string>
    <string name="dev_about_title">Developers</string>
    <string name="dev_about">GoNote.it is being developed by NapCode.
        \nAndroid dev: Natalia Jastrzębska
        \nBackend dev: Paweł Jastrzębski</string>
    <string name="napcode_web">http://napcode.eu</string>
    <string name="playstore_market">market://dev?id=8034018404241334903</string>
    <string name="playstore_web">https://play.google.com/store/apps/dev?id=8034018404241334903</string>
    <string name="repo_about_title">Repository</string>
    <string name="repo_about">Source code for mobile app is available on Github</string>
    <string name="repo_github">https://github.com/nani92/GoNoteIt</string>
    <string name="content_description_home_page">Home page</string>
    <string name="content_description_play_store">Playstore</string>
    <string name="content_description_github_page">Github</string>

    <!--not clean string below :D -->
    <string name="permissions">permissions</string>
    <string name="perms_read">Read:</string>
    <string name="perms_write">Write:</string>
    <string name="perms_public">Public</string>
    <string name="perms_private">Private</string>
    <string name="perms_read_via_link">Via Link</string>
    <string name="perms_internal">Internal</string>
    <string name="perms_read_group">Group</string>
    <string name="perms_write_owner">Only Owner</string>
    <string name="perms_write_everyone">Everyone</string>
    <string name="perms_write_group">Group</string>
    <string name="permissions_dialog_title">Choose permissions for your note</string>
    <string name="ok">OK</string>
    <string name="perms_read_explanation">%1s can read this note.</string>
    <string name="perms_read_explanation_everyone">Everyone</string>
    <string name="perms_read_explanation_owner">Only owner</string>
    <string name="perms_read_explanation_link">Everyone with link</string>
    <string name="perms_read_explanation_group">Everyone within group</string>
    <string name="perms_write_explanation">%1s can modify this note.</string>
    <string name="perms_write_explanation_owner">Only owner</string>
    <string name="perms_write_explanation_everyone">Everyone</string>
    <string name="perms_write_explanation_group">Everyone within group</string>

    <string name="favorite">Favorite</string>
    <string name="hint_host">Host Address</string>
    <string name="content_description_add_date">Add date</string>

    <string name="today">TODAY</string>
    <string name="no_events_today">There is no events for today. \n Have a great day!</string>
    <string name="tomorrow">TOMOROW</string>
    <string name="no_events_tomorrow">There is no events for tomorrow.</string>

</resources>
