<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_notes"
        android:checkableBehavior="single">
        <item
            android:id="@+id/notes"
            android:title="@string/notes"
            android:icon="@drawable/ic_note_24px"/>
        <item
            android:id="@+id/fav_notes"
            android:title="@string/fav_notes"
            android:icon="@drawable/ic_favorite_24px"/>
    </group>
    <group
        android:id="@+id/menu_group_app"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_24px"
            android:title="@string/about"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_24px"
            android:title="@string/logout"/>
    </group>
</menu>