<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/base_margin">

    <TextView
        android:id="@+id/readPermsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perms_read"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/readPermsRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/labelBarrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/readPermsTextView">

        <RadioButton
            android:id="@+id/read_public_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perms_public"/>

        <RadioButton
            android:id="@+id/read_private_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perms_private"/>

        <RadioButton
            android:id="@+id/read_internal_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perms_internal"/>

    </RadioGroup>

    <TextView
        android:id="@+id/writePermsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/perms_write"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintTop_toBottomOf="@id/readPermsRadioGroup"/>

    <RadioGroup
        android:id="@+id/writePermsRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/labelBarrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/writePermsTextView">

        <RadioButton
            android:id="@+id/write_public_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perms_public"/>

        <RadioButton
            android:id="@+id/write_private_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perms_private"/>

        <RadioButton
            android:id="@+id/write_internal_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perms_internal"/>
    </RadioGroup>

    <android.support.constraint.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="readPermsTextView,writePermsTextView"/>

</android.support.constraint.ConstraintLayout>