<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_margin">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/AboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_about_title"/>

        <ImageView
            android:id="@+id/napcodeImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/napcode_logo_name_alpha"
            android:tint="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"/>

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dev_about"
            android:textSize="@dimen/about_content_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/napcodeImageView"/>

        <ImageView
            android:id="@+id/webImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_home_page"
            android:paddingBottom="@dimen/base_margin"
            android:paddingTop="@dimen/base_margin"
            android:src="@drawable/ic_grid_world"
            android:tint="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/midGuideline"
            app:layout_constraintTop_toBottomOf="@id/contentTextView"/>

        <ImageView
            android:id="@+id/playstoreImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_play_store"
            android:paddingBottom="@dimen/base_margin"
            android:paddingTop="@dimen/base_margin"
            android:src="@drawable/ic_playstore"
            android:tint="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/midGuideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentTextView"/>

        <android.support.constraint.Group
            android:id="@+id/expandGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="contentTextView,
                                           napcodeImageView,
                                           playstoreImageView,
                                           webImageView"
            tools:visibility="visible"/>

        <android.support.constraint.Guideline
            android:id="@+id/midGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    </android.support.constraint.ConstraintLayout>
</layout>