<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_margin">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/AboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_about_title"/>

        <ImageView
            android:id="@+id/githubImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_github_page"
            android:padding="@dimen/base_margin"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_github"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/imageGuideline"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"/>

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:text="@string/repo_about"
            android:textSize="@dimen/about_content_text_size"
            app:layout_constraintLeft_toRightOf="@id/imageGuideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/githubImageView"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_content_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:text="@tools:sample/lorem/random"/>

        <android.support.constraint.Group
            android:id="@+id/expandGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="githubImageView,contentTextView,
                descriptionTextView"
            tools:visibility="visible"/>

        <android.support.constraint.Guideline
            android:id="@+id/imageGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3"/>

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="githubImageView,contentTextView"/>

    </android.support.constraint.ConstraintLayout>
</layout>